--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="" />
+    <link
+      href="http://fonts.cdnfonts.com/css/euclid-circular-a?styles=100037,100036,100039"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="" />
-
-    <link rel="manifest" href="" />
 
     <title>Sisyphus</title>
   </head>
