--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="./icon.png" />
     <link
       href="http://fonts.cdnfonts.com/css/euclid-circular-a?styles=100037,100036,100039"
       rel="stylesheet"
@@ -14,7 +14,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>Sisyphus</title>
+    <title>Sisyphus - Manage your tasks</title>
   </head>
   <body>
     <div id="root"></div>
